--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -124,7 +124,7 @@
         { "@@type":"ListItem", "position":29,"url":"https://www.sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg"},
         { "@@type":"ListItem", "position":30,"url":"https://www.sparkt.in/Content/work/images/thums/tgilc-thums.jpg"},
         { "@@type":"ListItem", "position":31,"url":"https://www.sparkt.in/Content/work/images/thums/oneplus-thum.jpg"},
-        { "@@type":"ListItem", "position":32,"url":"https://www.sparkt.in/Content/work/images/thums/junglebook-thum.jpgg"},
+        { "@@type":"ListItem", "position":32,"url":"https://www.sparkt.in/Content/work/images/thums/junglebook-thum.jpg"},
         { "@@type":"ListItem", "position":33,"url":"https://www.sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg"}
         ]
         }
