--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Dance+2";
     ViewBag.MetaDescription = "Getting the nation to dance to our tune with <br>video innovations and thumbstopping content";
-    ViewBag.MetaURL = "http://sparkt.in/work/DancePlus2";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/DancePlus2";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
 }
 @section BodyClass {star-plus}
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "Dance+2 Video",
     "@@id": "https://www.sparkt.in/Content/work/media/socailMediavideo1.mp4",
