--- a/Sparkt.WebApp/Views/work/Dhoni.cshtml
+++ b/Sparkt.WebApp/Views/work/Dhoni.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | M.S. Dhoni - The Untold Story";
     ViewBag.MetaDescription = "Thumb-stopping digital campaign to build excitement for World Television Premiere";
-    ViewBag.MetaURL = "http://sparkt.in/work/Dhoni";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ms-dhoni-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Dhoni";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ms-dhoni-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
