--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Ikyawann";
     ViewBag.MetaDescription = "Not shaadi material";
-    ViewBag.MetaURL = "http://sparkt.in/work/Ikyawann";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Ikyawann";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
