--- a/Sparkt.WebApp/Views/work/Index.cshtml
+++ b/Sparkt.WebApp/Views/work/Index.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <!--<div id="parallax1" class="parallaxParent">
-      <div style="background-image: url(http://scrollmagic.io/img/example_parallax_bg1.png);"></div>
+      <div style="background-image: url(https://scrollmagic.io/img/example_parallax_bg1.png);"></div>
     </div>-->
 
     <div class="section">
