--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Piramal | India RF";
     ViewBag.MetaDescription = "One Vision. 2x the Impact.";
-    ViewBag.MetaURL = "http://sparkt.in/work/IndiaRF";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/india-rf-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/IndiaRF";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/india-rf-thum.jpg";
 }
 @section BodyClass {piramal}
 <main>
