--- a/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
+++ b/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Ishqbaaaz";
     ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
-    ViewBag.MetaURL = "http://sparkt.in/work/IshqBaaaz";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/IshqBaaaz";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -50,27 +50,27 @@
                                         <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/f5DNxxlSOs8/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/f5DNxxlSOs8/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/f5DNxxlSOs8" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/WCop4EgZVmE/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/WCop4EgZVmE/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/WCop4EgZVmE" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/e5WF0BgyeJs/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/e5WF0BgyeJs/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/e5WF0BgyeJs" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/XKrmrrRVGTc/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/XKrmrrRVGTc/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/XKrmrrRVGTc" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/0Ne_QVhtKoU/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/0Ne_QVhtKoU/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/0Ne_QVhtKoU" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -78,11 +78,11 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/f5DNxxlSOs8/mqdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/WCop4EgZVmE/mqdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/e5WF0BgyeJs/mqdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/XKrmrrRVGTc/mqdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/0Ne_QVhtKoU/mqdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/f5DNxxlSOs8/mqdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/WCop4EgZVmE/mqdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/e5WF0BgyeJs/mqdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/XKrmrrRVGTc/mqdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/0Ne_QVhtKoU/mqdefault.jpg" alt="" /></a> </div>
 
                                     </div>
                                 </div>
