--- a/Sparkt.WebApp/Views/work/Khichdi.cshtml
+++ b/Sparkt.WebApp/Views/work/Khichdi.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Khichdi";
     ViewBag.MetaDescription = "Digital exclusive content to introduce iconic characters";
-    ViewBag.MetaURL = "http://sparkt.in/work/Khichdi";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/khichadi-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Khichdi";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/khichadi-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -55,23 +55,23 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/aXKoL1gwo7E" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/OryPbyj1fLc" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Ez8ZDfc-eaM" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Ez8ZDfc-eaM" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -79,10 +79,10 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/aXKoL1gwo7E/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/OryPbyj1fLc/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Ez8ZDfc-eaM/maxresdefault.jpg" alt="" /></a> </div>
 
 
                                     </div>
@@ -104,37 +104,37 @@
                                         <div class="video-slider">
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/GBsPThfY9r8" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/q2P6C5fUI5Q" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/w3QCXuHxS3w" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Iu1otqZRD6Y" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/nkqzwr2kiDs" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/4Rx29y4f_D0" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -143,16 +143,16 @@
                                     </div>
                                     <div class="video-nav">
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/GBsPThfY9r8/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/q2P6C5fUI5Q/maxresdefault.jpg" alt="" /></a> </div>
 
 
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/w3QCXuHxS3w/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Iu1otqZRD6Y/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/nkqzwr2kiDs/maxresdefault.jpg" alt="" /></a> </div>
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/4Rx29y4f_D0/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -172,13 +172,13 @@
                                         <div class="video-slider">
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/GBsPThfY9r8" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/RoyV6jp5SaU" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -189,8 +189,8 @@
                                     </div>
                                     <div class="video-nav">
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/1HP84ZLt2lo/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/RoyV6jp5SaU/maxresdefault.jpg" alt="" /></a> </div>
 
 
 
