--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Kulfi";
     ViewBag.MetaDescription = "She sings about anything!";
-    ViewBag.MetaURL = "http://sparkt.in/work/Kullfi";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Kullfi";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -52,23 +52,23 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/FmmX4GmRp4s" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/n5n-bLAmclk" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/33_NVZDfMIs" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/ZunNvPz2_bo" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -79,11 +79,11 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" alt="" /></a> </div>
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" alt="" /></a> </div>
 
                                     </div>
                                 </div>
@@ -104,17 +104,17 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/B32UFp9WQKU" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/u3uaLk36y9A" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/5SBvjACGdYk" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -125,9 +125,9 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -149,17 +149,17 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/HovJd6pnR2M" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/fRXV9RuFqEw" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/2mKbQam0IOc" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -170,9 +170,9 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
