--- a/Sparkt.WebApp/Views/work/MGage.cshtml
+++ b/Sparkt.WebApp/Views/work/MGage.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "mGage";
     ViewBag.MetaDescription = "Powered by insights. Driven by mobile.";
-    ViewBag.MetaURL = "http://sparkt.in/work/MGage";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mGage-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MGage";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mGage-thum.jpg";
 }
 
 <main>
