--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Made By Mom";
     ViewBag.MetaDescription = "Igniting a Nayi Soch on Mother’s Day";
-    ViewBag.MetaURL = "http://sparkt.in/work/MadeByMom";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MadeByMom";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -49,62 +49,62 @@
                                         <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/MvurOqxWZbc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/MvurOqxWZbc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/MvurOqxWZbc" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/gyZG7Juk_gg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/gyZG7Juk_gg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/gyZG7Juk_gg" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/91xzli-FcWQ/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/91xzli-FcWQ/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/91xzli-FcWQ" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/bfXzcvHvQ80/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/bfXzcvHvQ80/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/bfXzcvHvQ80" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/HpXQtmPi93s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/HpXQtmPi93s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/HpXQtmPi93s" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/WxE4-3cbmPA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/WxE4-3cbmPA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/WxE4-3cbmPA" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/UlHQZpURGS4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/UlHQZpURGS4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/UlHQZpURGS4" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/_fnVjzcxXLs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/_fnVjzcxXLs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/_fnVjzcxXLs" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Omc6S_vOlK8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Omc6S_vOlK8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Omc6S_vOlK8" type="video/youtube" />
                                                 </video>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/MvurOqxWZbc/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/gyZG7Juk_gg/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/91xzli-FcWQ/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/bfXzcvHvQ80/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/HpXQtmPi93s/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/WxE4-3cbmPA/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/UlHQZpURGS4/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/_fnVjzcxXLs/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/Omc6S_vOlK8/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/MvurOqxWZbc/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/gyZG7Juk_gg/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/91xzli-FcWQ/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/bfXzcvHvQ80/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/HpXQtmPi93s/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/WxE4-3cbmPA/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/UlHQZpURGS4/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/_fnVjzcxXLs/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/Omc6S_vOlK8/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                     <div class=" single-video-carousel">
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/4QRBHpKRL44/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/4QRBHpKRL44/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/4QRBHpKRL44" type="video/youtube" />
                                                 </video>
                                             </div>
