--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF BADHAT YOJANA";
     ViewBag.MetaDescription = "Exploring how richness is measured in Indian society";
-    ViewBag.MetaURL = "http://sparkt.in/work/MahindraBadhatYojana";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MahindraBadhatYojana";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
@@ -51,21 +51,21 @@
                                     <div class=" single-video-carousel">
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/tvQ852vMBbs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/tvQ852vMBbs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/tvQ852vMBbs" type="video/youtube" />
                                                 </video>
                                             </div>
                                         </div>
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/5eeilFxysw0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/5eeilFxysw0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/5eeilFxysw0" type="video/youtube" />
                                                 </video>
                                             </div>
                                         </div>
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/uG-pFZN8KXM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/uG-pFZN8KXM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/uG-pFZN8KXM" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -73,7 +73,7 @@
 
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/UZfX-SVJL-w/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/UZfX-SVJL-w/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/UZfX-SVJL-w" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -81,7 +81,7 @@
 
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/wMyE5-9ozOQ/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/wMyE5-9ozOQ/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/wMyE5-9ozOQ" type="video/youtube" />
                                                 </video>
                                             </div>
