--- a/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
     ViewBag.MetaDescription = "Conversational interface for enchanced experience";
-    ViewBag.MetaURL = "http://sparkt.in/work/MahindraMMF";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MahindraMMF";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
@@ -92,7 +92,7 @@
                                         </li>
                                     </ul>
 
-                                    <a href="http://www.mahindramutualfund.com/" target="_blank" class="view-website center">VIEW WEBSITE</a>
+                                    <a href="https://www.mahindramutualfund.com/" target="_blank" class="view-website center">VIEW WEBSITE</a>
                                 </div>
 
 
