--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF NFO Launches";
     ViewBag.MetaDescription = "Seamless integration of traditional and digital media.";
-    ViewBag.MetaURL = "http://sparkt.in/work/MahindraNfoLaunches";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MahindraNfoLaunches";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
