--- a/Sparkt.WebApp/Views/work/MahindraTah.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTah.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Kar Bachat Yojana";
     ViewBag.MetaDescription = "Igniting a national debate on Taxes Acche Hain ahead of Budget 2017";
-    ViewBag.MetaURL = "http://sparkt.in/work/MahindraTah";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/tah-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MahindraTah";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/tah-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
