--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF Textmoji";
     ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
-    ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/TextMoji";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
@@ -87,7 +87,7 @@
                                         </li>
                                     </ul>
 
-                                    <a href="http://www.mahindramutualfund.com/" target="_blank" class="view-website center">VIEW WEBSITE</a>
+                                    <a href="https://www.mahindramutualfund.com/" target="_blank" class="view-website center">VIEW WEBSITE</a>
                                 </div>
 
 
