--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Mahindra - Unnati Emerging Business Yojana";
     ViewBag.MetaDescription = "Samay se Aagey";
-    ViewBag.MetaURL = "http://sparkt.in/work/MahindraUnnati";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/MahindraUnnati";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg";
 }
 @section BodyClass {mahindra}
 <main>
