--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Nach Baliye 8";
     ViewBag.MetaDescription = "Bringing alive the Romance-wala Dance";
-    ViewBag.MetaURL = "http://sparkt.in/work/NachBaliye8";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/NachBaliye8";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
