--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Nayi Soch";
     ViewBag.MetaDescription = "Wear your Mothers name with pride";
-    ViewBag.MetaURL = "http://sparkt.in/work/NayiSoch";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nayosoch-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/NayiSoch";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/nayosoch-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
