--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | One Plus | OnePlus";
     ViewBag.MetaDescription = "The power of 5 in customer care";
-    ViewBag.MetaURL = "http://sparkt.in/work/OnePlus";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/OnePlus";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
 @section BodyClass {one -plus}
 <main>
@@ -50,28 +50,28 @@
                                         <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/GSj4KLwj8J4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/GSj4KLwj8J4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/GSj4KLwj8J4" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/ECodh83YZc0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/ECodh83YZc0/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/ECodh83YZc0" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/rkLXXlCQUHE/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/rkLXXlCQUHE/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/rkLXXlCQUHE" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/z-E9MElxZ4M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/z-E9MElxZ4M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/z-E9MElxZ4M" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://i3.ytimg.com/vi/hqLFwwx3rjk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://i3.ytimg.com/vi/hqLFwwx3rjk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/hqLFwwx3rjk" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -79,12 +79,12 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/GSj4KLwj8J4/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/ECodh83YZc0/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/rkLXXlCQUHE/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/GSj4KLwj8J4/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/ECodh83YZc0/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/rkLXXlCQUHE/maxresdefault.jpg" alt="" /></a> </div>
 
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/z-E9MElxZ4M/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://i3.ytimg.com/vi/hqLFwwx3rjk/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/z-E9MElxZ4M/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://i3.ytimg.com/vi/hqLFwwx3rjk/maxresdefault.jpg" alt="" /></a> </div>
 
                                     </div>
                                 </div>
