--- a/Sparkt.WebApp/Views/work/Swp.cshtml
+++ b/Sparkt.WebApp/Views/work/Swp.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star | Star Writers Program";
     ViewBag.MetaDescription = "Creating Indias first university program for creative writers";
-    ViewBag.MetaURL = "http://sparkt.in/work/Swp";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/swp-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Swp";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/swp-thum.jpg";
 }
 @section BodyClass {star}
 <main>
@@ -62,7 +62,7 @@
                                         </script>
                                     </div>
 
-                                    <a href="http://starwritersprogram.startv.com/" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="https://starwritersprogram.startv.com/" target="_blank" class="view-website">VIEW WEBSITE</a>
 
                                 </div>
                             </div>
