--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | TED TALKS Google Cards";
     ViewBag.MetaDescription = "Google Cards";
-    ViewBag.MetaURL = "http://sparkt.in/work/TedGoogleCards";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ted-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/TedGoogleCards";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ted-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
