--- a/Sparkt.WebApp/Views/work/Tgilc.cshtml
+++ b/Sparkt.WebApp/Views/work/Tgilc.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | The Great Indian Laughter Challenge";
     ViewBag.MetaDescription = "Getting the nation to join in on a laughter riot with thumbstopping content";
-    ViewBag.MetaURL = "http://sparkt.in/work/Tgilc";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/tgilc-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Tgilc";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/tgilc-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -58,29 +58,29 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/c8ZmBI9RkEA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/c8ZmBI9RkEA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/c8ZmBI9RkEA" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/oRWflcgUT9M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/oRWflcgUT9M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/oRWflcgUT9M" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/5K_rXI9VZTM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/5K_rXI9VZTM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/5K_rXI9VZTM" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/XTcI8m-v8_Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/XTcI8m-v8_Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/XTcI8m-v8_Y" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/M5aDZdTmh64/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/M5aDZdTmh64/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/M5aDZdTmh64" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -88,11 +88,11 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/c8ZmBI9RkEA/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/oRWflcgUT9M/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/5K_rXI9VZTM/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/XTcI8m-v8_Y/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/M5aDZdTmh64/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/c8ZmBI9RkEA/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/oRWflcgUT9M/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/5K_rXI9VZTM/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/XTcI8m-v8_Y/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/M5aDZdTmh64/maxresdefault.jpg" alt="" /></a> </div>
 
 
                                     </div>
