--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports | UCypher";
     ViewBag.MetaDescription = "Naya Sport. Naye Superstars.";
-    ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/UCypher";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
 <main>
@@ -55,7 +55,7 @@
 
                     <div class="lightgallery-single play-icon" style="background-image: url(../Content/work/images/u-cypher-creative-assets.jpg); background-color: #2b1150; background-position: top center; position: relative; background-repeat: no-repeat; background-size:cover">
 
-                        <a class="creative-assets-video" href="http://www.youtube.com/embed/Z1IBxG7kR7Y?rel=0&amp;autoplay=1&amp;wmode=transparent" data-sub-html="<h4>Hum Gamer Hain an anthem for the gamers introducing them <br>to the thrilling world of UCypher </h4>">
+                        <a class="creative-assets-video" href="https://www.youtube.com/embed/Z1IBxG7kR7Y?rel=0&amp;autoplay=1&amp;wmode=transparent" data-sub-html="<h4>Hum Gamer Hain an anthem for the gamers introducing them <br>to the thrilling world of UCypher </h4>">
 
                             <div class="creative-assets   center fixed-bg bottom cypher-water-flow " style="background-image: url(../Content/work/images/u-cypher-creative-assets-water-flow.png);">
 
@@ -80,24 +80,24 @@
 
                                 <div class="video-slider">
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/YfuCIgh_DQk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/YfuCIgh_DQk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/YfuCIgh_DQk" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/hNrOotKWqUA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/hNrOotKWqUA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/hNrOotKWqUA" type="video/youtube" />
                                         </video>
                                     </div>
 
 
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/qoGOXK9Dsf8" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/GjwNSOFupFA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/GjwNSOFupFA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/GjwNSOFupFA" type="video/youtube" />
                                         </video>
                                     </div>
@@ -111,12 +111,12 @@
 
 
                         <div class="video-nav">
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/YfuCIgh_DQk/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo CSGO</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/hNrOotKWqUA/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo DOTA</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/YfuCIgh_DQk/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo CSGO</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/hNrOotKWqUA/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo DOTA</span></a> </div>
 
 
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" alt="" /><span class="caption">TEKKEN 7 | The New Battleground</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/GjwNSOFupFA/maxresdefault.jpg" alt="" /><span class="caption">DOTA 2 | The New Battleground</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" alt="" /><span class="caption">TEKKEN 7 | The New Battleground</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/GjwNSOFupFA/maxresdefault.jpg" alt="" /><span class="caption">DOTA 2 | The New Battleground</span></a> </div>
 
                         </div>
 
@@ -132,28 +132,28 @@
 
                                 <div class="video-slider">
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/XshSDUkyu5g/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/XshSDUkyu5g/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/XshSDUkyu5g" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/2o-68KzIbts/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/2o-68KzIbts/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/2o-68KzIbts" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/gcMZXXV53X4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/gcMZXXV53X4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/gcMZXXV53X4" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/NhjqfFL7uWA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/NhjqfFL7uWA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/NhjqfFL7uWA" type="video/youtube" />
                                         </video>
                                     </div>
 
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/v5KLru8pVEo" type="video/youtube" />
                                         </video>
                                     </div>
@@ -172,11 +172,11 @@
 
 
                         <div class="video-nav">
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/XshSDUkyu5g/maxresdefault.jpg" alt="" /><span class="caption">Ankit | Captain - Marksmen </span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/2o-68KzIbts/maxresdefault.jpg" alt="" /><span class="caption">Vivek | Captain - Yakshas</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/gcMZXXV53X4/maxresdefault.jpg" alt="" /><span class="caption">Atul | Captain - Crusaders</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/NhjqfFL7uWA/maxresdefault.jpg" alt="" /><span class="caption">Pranay | Captain - Yodhas</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" alt="" /><span class="caption">Ritesh | Captain - Sherdils</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/XshSDUkyu5g/maxresdefault.jpg" alt="" /><span class="caption">Ankit | Captain - Marksmen </span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/2o-68KzIbts/maxresdefault.jpg" alt="" /><span class="caption">Vivek | Captain - Yakshas</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/gcMZXXV53X4/maxresdefault.jpg" alt="" /><span class="caption">Atul | Captain - Crusaders</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/NhjqfFL7uWA/maxresdefault.jpg" alt="" /><span class="caption">Pranay | Captain - Yodhas</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" alt="" /><span class="caption">Ritesh | Captain - Sherdils</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="images/u-cypher-akshay-akramaks.jpg" alt="" /><span class="caption">Akshay | Captain - Akramaks</span></a> </div>
 
                         </div>
@@ -193,12 +193,12 @@
 
                                 <div class="video-slider">
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/Iip0Ux2Tty4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/Iip0Ux2Tty4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/Iip0Ux2Tty4" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/BAERor1SZyE/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/BAERor1SZyE/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/BAERor1SZyE" type="video/youtube" />
                                         </video>
                                     </div>
@@ -206,19 +206,19 @@
 
 
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/5ghMbNzQNjY" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/HEIvySNZB_U/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/HEIvySNZB_U/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/HEIvySNZB_U" type="video/youtube" />
                                         </video>
                                     </div>
 
 
                                     <div class="video-item">
-                                        <video poster="http://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="https://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/1LvaufoRJQg" type="video/youtube" />
                                         </video>
                                     </div>
@@ -235,12 +235,12 @@
 
 
                         <div class="video-nav">
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Iip0Ux2Tty4/maxresdefault.jpg" alt="" /><span class="caption">What is #UCYPHER?</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/BAERor1SZyE/maxresdefault.jpg" alt="" /><span class="caption">Hoezaay Indian Counter Strike Players Be Like</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Iip0Ux2Tty4/maxresdefault.jpg" alt="" /><span class="caption">What is #UCYPHER?</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/BAERor1SZyE/maxresdefault.jpg" alt="" /><span class="caption">Hoezaay Indian Counter Strike Players Be Like</span></a> </div>
 
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" alt="" /><span class="caption">Triple Kill</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/HEIvySNZB_U/maxresdefault.jpg" alt="" /><span class="caption">Perfect Gameplay</span></a> </div>
-                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" alt="" /><span class="caption">KO</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" alt="" /><span class="caption">Triple Kill</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/HEIvySNZB_U/maxresdefault.jpg" alt="" /><span class="caption">Perfect Gameplay</span></a> </div>
+                            <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" alt="" /><span class="caption">KO</span></a> </div>
 
                         </div>
 
@@ -305,7 +305,7 @@
                                     <div class="three-img-carousel single-video">
                                         <div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/JoxQypmFOXg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/JoxQypmFOXg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/JoxQypmFOXg" type="video/youtube" />
                                                 </video>
                                             </div>
