--- a/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports | UCypher - Insta Fight";
     ViewBag.MetaDescription = "Insta Fight";
-    ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/UCypher";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "UCypher Video",
     "@@id": "https://www.sparkt.in/Content/work/media/insta-fight.mp4",
