--- a/Sparkt.WebApp/Views/work/UCypherUseOfData.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfData.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports | UCypher";
     ViewBag.MetaDescription = "Naya Sport. Naye Superstars";
-    ViewBag.MetaURL = "http://sparkt.in/work/UCypherUseOfData";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/UCypherUseOfData";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
 <main>
