--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports | UCypher - Use Of Data Marketing Sciences";
     ViewBag.MetaDescription = "Use Of Data Marketing Sciences";
-    ViewBag.MetaURL = "http://sparkt.in/work/UCypherUseOfDataMS";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/UCypherUseOfDataMS";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
 <main>
