--- a/Sparkt.WebApp/Views/work/USports.cshtml
+++ b/Sparkt.WebApp/Views/work/USports.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports ";
     ViewBag.MetaDescription = "A new-age multifaceted sports company";
-    ViewBag.MetaURL = "http://sparkt.in/work/USports";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/USports";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/usports-thum.jpg";
 }
 @section BodyClass {usports}
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "USports Video",
     "@@id": "https://www.sparkt.in/Content/work/media/usports-desktop.mp4",
@@ -74,7 +74,7 @@
                                         </script>
                                     </div>
 
-                                    <a href="http://usports.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="https://usports.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
 
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                             <small class="project__category"><a href="#">MAKE YOUR OWN VIRTUAL JERSEY ON A GOOGLE LIGHTBOX BANNER</a></small>
                                         </div>-->
                                     </div>
-                                    <a href="http://usports.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="https://usports.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
                                 </div>
                             </div>
                         </div>
