--- a/Sparkt.WebApp/Views/work/USportsScratch.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsScratch.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | USports - Scratch";
     ViewBag.MetaDescription = "Scratch to unlock the website";
-    ViewBag.MetaURL = "http://sparkt.in/work/USportsScratch";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/USportsScratch";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg";
 }
 @section BodyClass {usports}
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "Scratch Video",
     "@@id": "https://www.sparkt.in/Content/work/media/usports-scratch.mp4",
@@ -70,7 +70,7 @@
                                             <img src="~/Content/work/images/usports-hamburger-phone.png" alt="" />
                                         </div>
                                         <figcaption>
-                                            <a class="hvr-sweep-to-right" href="http://www.usports.in/scratch" target="_blank">experience creative</a>
+                                            <a class="hvr-sweep-to-right" href="https://www.usports.in/scratch" target="_blank">experience creative</a>
                                             <div class="clear"></div>
                                             <span class="hvr-sweep-to-right">ONLY FOR Mobile PHONES </span>
                                         </figcaption>
