--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Women’s Day";
     ViewBag.MetaDescription = "Igniting a Nayi Soch to break gender stereotypes";
-    ViewBag.MetaURL = "http://sparkt.in/work/WomensDay";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/womens-day-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/WomensDay";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/womens-day-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
