--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Boutique Living";
     ViewBag.MetaDescription = "Bringing a world-conquering brand to its homeland in India";
-    ViewBag.MetaURL = "http://sparkt.in/work/bql";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/boutique-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/bql";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/boutique-thum.jpg";
 }
 @section BodyClass {bql}
 <main>
@@ -67,7 +67,7 @@
                                         </script>
                                     </div>
 
-                                    <a href="http://boutiquelivingindia.com/" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="https://boutiquelivingindia.com/" target="_blank" class="view-website">VIEW WEBSITE</a>
 
                                 </div>
                             </div>
