--- a/Sparkt.WebApp/Views/work/brickex.cshtml
+++ b/Sparkt.WebApp/Views/work/brickex.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Piramal | Brickex";
     ViewBag.MetaDescription = "India’s leading B2B platform providing real estate and financial services";
-    ViewBag.MetaURL = "http://sparkt.in/work/brickex";
-    ViewBag.MetaImage= "http://sparkt.in/Content/work/images/thums/brickex-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/brickex";
+    ViewBag.MetaImage= "https://sparkt.in/Content/work/images/thums/brickex-thum.jpg";
 }
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "Brickex Video",
     "@@id": "https://www.sparkt.in/Content/work/media/brickex-mob.mp4",
