--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | Har Shaakh Pe Ullu Baithaa Hai";
     ViewBag.MetaDescription = "Kya Ullu Banaya";
-    ViewBag.MetaURL = "http://sparkt.in/work/HSPubh";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/hsubh-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/HSPubh";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/hsubh-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -51,53 +51,53 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/P8vMoL_bRjs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/P8vMoL_bRjs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/P8vMoL_bRjs" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/c98DFmWEF2I/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/c98DFmWEF2I/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/c98DFmWEF2I" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/0TJpL1JPeEU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/0TJpL1JPeEU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/0TJpL1JPeEU" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/5yBw1YcR2eI/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/5yBw1YcR2eI/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/5yBw1YcR2eI" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/0WElSVbq9Ow/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/0WElSVbq9Ow/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/0WElSVbq9Ow" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/sY8JfK9MPUA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/sY8JfK9MPUA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/sY8JfK9MPUA" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/gIbRoYOxsNI/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/gIbRoYOxsNI/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/gIbRoYOxsNI" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/qksvjirh7a4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/qksvjirh7a4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/qksvjirh7a4" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/s4_QIiYQwvY/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/s4_QIiYQwvY/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/s4_QIiYQwvY" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -106,17 +106,17 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/P8vMoL_bRjs/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/c98DFmWEF2I/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/0TJpL1JPeEU/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/P8vMoL_bRjs/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/c98DFmWEF2I/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/0TJpL1JPeEU/maxresdefault.jpg" alt="" /></a> </div>
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/5yBw1YcR2eI/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/0WElSVbq9Ow/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/sY8JfK9MPUA/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/5yBw1YcR2eI/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/0WElSVbq9Ow/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/sY8JfK9MPUA/maxresdefault.jpg" alt="" /></a> </div>
 
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/gIbRoYOxsNI/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/qksvjirh7a4/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/s4_QIiYQwvY/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/gIbRoYOxsNI/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/qksvjirh7a4/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/s4_QIiYQwvY/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -162,23 +162,23 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Gv5UjvNME7Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Gv5UjvNME7Y/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Gv5UjvNME7Y" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/wcymM8qre4o/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/wcymM8qre4o/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/wcymM8qre4o" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/XaOwcWCdBRM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/XaOwcWCdBRM/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/XaOwcWCdBRM" type="video/youtube" />
                                                 </video>
                                             </div>
 
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/Tjo2_8HNpmg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/Tjo2_8HNpmg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/Tjo2_8HNpmg" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -187,10 +187,10 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Gv5UjvNME7Y/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/wcymM8qre4o/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/XaOwcWCdBRM/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/Tjo2_8HNpmg/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Gv5UjvNME7Y/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/wcymM8qre4o/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/XaOwcWCdBRM/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Tjo2_8HNpmg/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -210,17 +210,17 @@
 
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/lhwRDAHwr7g/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/lhwRDAHwr7g/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/lhwRDAHwr7g" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/155O7oP1v7s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/155O7oP1v7s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/155O7oP1v7s" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/TBNzBHOTaCc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/TBNzBHOTaCc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/TBNzBHOTaCc" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -231,9 +231,9 @@
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/lhwRDAHwr7g/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/155O7oP1v7s/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/TBNzBHOTaCc/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/lhwRDAHwr7g/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/155O7oP1v7s/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/TBNzBHOTaCc/maxresdefault.jpg" alt="" /></a> </div>
                                     </div>
                                 </div>
                             </div>
