--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | The Jungle Book";
     ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
-    ViewBag.MetaURL = "http://sparkt.in/work/JungleBook";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/junglebook-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/JungleBook";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/junglebook-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
@@ -51,7 +51,7 @@
                                         <div><img src="~/Content/work/images/mowgli-creative2.gif" alt="" /></div>
                                         @*<div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/WBuXXoFeJIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="https://img.youtube.com/vi/WBuXXoFeJIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/WBuXXoFeJIs" type="video/youtube" />
                                                 </video>
                                             </div>
