--- a/Sparkt.WebApp/Views/work/Phfl.cshtml
+++ b/Sparkt.WebApp/Views/work/Phfl.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Piramal | Piramal Housing Finance";
     ViewBag.MetaDescription = "A customer-first approach to home loans";
-    ViewBag.MetaURL = "http://sparkt.in/work/Phfl";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/phfl-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Phfl";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/phfl-thum.jpg";
 }
 @section BodyClass {piramal}
 <main>
