--- a/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Piramal | Piramal Capital";
     ViewBag.MetaDescription = "Values create value";
-    ViewBag.MetaURL = "http://sparkt.in/work/PiramalCapital";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/PiramalCapital";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
 }
 @section BodyClass {piramal}
 <script type="application/ld+json">
     {
-    "@@context": "http://schema.org",
+    "@@context": "https://schema.org",
     "@@type": "VideoObject",
     "name": "Piramal Capital Video",
     "@@id": "https://www.sparkt.in/Content/work/media/piramal-desktop.mp4",
