--- a/Sparkt.WebApp/Views/work/Pow.cshtml
+++ b/Sparkt.WebApp/Views/work/Pow.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Star Plus | POW - Bandi Yuddh Ke";
     ViewBag.MetaDescription = "A first-of-a-kind banner that created true 'shock' value";
-    ViewBag.MetaURL = "http://sparkt.in/work/Pow";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/pow-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/Pow";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/pow-thum.jpg";
 }
 @section BodyClass {star-plus}
 <main>
