--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Text Moji";
     ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
-    ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
-    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
+    ViewBag.MetaURL = "https://sparkt.in/work/TextMoji";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
 @section BodyClass {mahindra}
 
